--- a/emlink.html
+++ b/emlink.html
@@ -48,7 +48,7 @@
 		<a href="index.html">
 			<i class="fas fa-arrow-left backicon"></i>
 		</a>
-		<img src="img/LOGO EM UB 2021.png" alt="" class="loginicon" />
+		<img src="img/logo em ub 2022.png" alt="" class="loginicon" />
 		<div class="loginform">
 			<h1 class="text-center" style="font-weight: bolder">EM - Link</h1>
 			<div id="login" class="text-center">
