--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
 		<link rel="shortcut icon" href="img/icon/logo.png" />
 	</head>
 	<body>
-		<img src="img/LOGO EM UB 2021.png" alt="" class="loginicon" />
+		<img src="img/logo em ub 2022.png" alt="" class="loginicon" />
 		<div class="loginform">
 			<h1 class="text-center">EM APPS</h1>
 			<form id="loginform" action="">
@@ -40,14 +40,14 @@
 				<input
 					type="password"
 					name="password"
-					placeholder="password"
+					placeholder="Password"
 					id="password"
 				/>
 				<button type="submit" class="loginbutton" id="login">Login</button>
 			</form>
 		</div>
 		<a href="index.html">
-			<p class="text-center mt-3 text-white">&#8592; back to homepage</p>
+			<p class="text-center mt-3 text-white">&#8592; Back to Homepage</p>
 		</a>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/idb.js"></script>
