update em event

--- a/onGoing.html
+++ b/onGoing.html
@@ -19,27 +19,27 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
 
-  <link rel="shortcut icon" href="img/logoemnormal.png">
+  <link rel="shortcut icon" href="img/emlogo2022.png">
   <title>EM EVENT</title>
 </head>
 
 <body>
   <a href="index.html">
-    <i class="fas fa-arrow-left backicon" style="font-size: 20px;color: #5d4b75;"></i>
+    <i class="fas fa-arrow-left backicon" style="font-size: 20px;color: #380F14;"></i>
   </a>
   <section id="ongoingcontent">
     <div class="container-xl">
       <div class="childpagejumbo text-center">
-        <img src="img/icon/2021/IconEvent.png" alt="" class="mt-n5" />
+        <img src="img/emevent.png" alt="" class="mt-n5" />
         <h2 class="mt-3 font-weight-bold">On Going Event</h2>
         <hr />
         <br>
       </div>
       <div class="row ml-0 mr-0 justify-content-center">
-        <div class="col-6 no-gutters">
+        <div class="col-5 no-gutters">
           <a href="oprec.html">
             <div class="menubox">
-              <img src="img/icon/2021/Oprec.png" alt="" class="d-block m-auto" />
+              <img src="img/icon/2021/iconoprec2.png" alt="" class="d-block m-auto" />
               <h4 class="text-center">
                 Rekrutmen Terbuka
               </h4>
@@ -96,7 +96,7 @@
     <div class="container-fluid mt-5">
       <div class="row">
         <div class="col-sm-12">
-          <p class=" small font-weight-lighter mt-2 mb-2">Dari Biro Puskominfo &#10084; Untuk Brawijaya</p>
+          <p class=" small font-weight-lighter mt-2 mb-2">Copyright &#169; IT EM UB 2022</p>
         </div>
       </div>
     </div>
