--- a/oprec.html
+++ b/oprec.html
@@ -8,7 +8,7 @@
   <!--  Favicon -->
   <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"> -->
   <!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon"> -->
-  <link rel="shortcut icon" href="img/logoemnormal.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/emlogo2022.png" type="image/x-icon">
 
   <title>EM OPEN RECRUITMENT</title>
 
@@ -37,19 +37,21 @@
     <div class="indeterminate"></div>
   </div>
   <a href="onGoing.html">
-    <i class="fas fa-arrow-left backicon" style="font-size: 20px;color: #5d4b75;"></i>
+    <i class="fas fa-arrow-left backicon" style="font-size: 20px;color: #380F14;"></i>
   </a>
   <section id="agendalist">
+    <h1> </h1>
     <div class="childpagejumbo mt-n5">
-      <img src="img/icon/2021/Oprec.png" alt="" class="" />
-      <h3>Rekrutmen Terbuka EM 2021</h3>
+      
+      <img src="img/icon/2021/iconoprec2.png" alt="" class="" />
+      <h3>Rekrutmen Terbuka EM 2022</h3>
       <p class="text-center">
-        Menemukan masalah? Pastikan menggunakan Browser yang mendukung(Google Chrome), juga sangat disarankan mengakses
+        Menemukan masalah? Pastikan menggunakan Browser yang mendukung (Google Chrome), juga sangat disarankan mengakses
         melalui PC/Laptop <br>
-        <b>CP Rabiatul Auliah (Id Line : rbtl_alh)</b>
+        <b>CP Putra Adhli Falah (Id Line : adhli7)</b>
         <br>apabila tautan daftar tidak muncul silahkan ikuti langkah diatas, atau :
         <b>
-          <a href="https://line.me/ti/p/~rbtl_alh" class="text-center">Klik Disini</a>
+          <a href="https://line.me/ti/p/~adhli7" class="text-center">Klik Disini</a>
         </b>
         
         <!-- <b> <a
