--- a/style/index.html
+++ b/style/index.html
@@ -9,11 +9,11 @@
   <!-- <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="../img/favicon.ico" type="image/x-icon"> -->
 
-  <link href="../img/icon/logo.png" rel="icon" />
+  <link href="../img/icon/logo em 2022.png" rel="icon" />
   <!-- Favicon -->
-  <title>EM Style</title>
+  <title>EM - Style</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115066231-1"></script>
-  <script>
+  <script> 
     window.dataLayer = window.dataLayer || [];
 
     function gtag() {
@@ -34,17 +34,17 @@
 
 <body>
   <a href="../index.html">
-    <i class="fas fa-arrow-left backicon mt-3" style="font-size: 20px;color: #5d4b75; top:auto"></i>
+    <i class="fas fa-arrow-left backicon mt-3" style="font-size: 20px;color: #ED7D4A; top:auto"></i>
   </a>
   <section id="ongoingcontent">
     <div class="childpagejumbo mt-n3">
-      <img src="../img/icon/2021/IconStyle.png" alt="" class="" />
-      <h2 class=" text-center mt-3">EM - Style</h2>
+      <img src="../style/img/em style.png" alt="" class="" />
+      <h2 class=" text-center mt-3 font-weight-bold ">EM - Style</h2>
     </div>
 
     <div>
       <ul class="infotabs pl-0">
-        <li id="twib"><img src="../img/icon/twib.svg" alt="" /> EM - Twib</li>
+        <li id="twib"><img src="../img/icon/twib.svg" alt="" /> EM - Twibbon</li>
         <li id="slide">
           <img src="../img/icon/emslide.svg" alt="" />
           EM - Slide
@@ -54,8 +54,8 @@
     </div>
     <!-- Content -->
     <section id="twib-content" style="display: block">
-      <div class="row ml-0 mr-0">
-          <div class="col-lg-4 no-gutters appspad mt-3">
+      <div class="row justify-content-center">
+          <div class="col-lg-3 no-gutters appspad mt-3">
             <a href="oprecstafmud2021.html">
               <div id="child2
               " class="menuboxtwib">
@@ -66,7 +66,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-4 no-gutters appspad mt-3">
+          <div class="col-lg-3 no-gutters appspad mt-3">
             <a href="oprecbmc2021.html">
               <div id="child2
               " class="menuboxtwib">
@@ -77,7 +77,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-4 no-gutters appspad mt-3">
+          <div class="col-lg-3 no-gutters appspad mt-3">
             <a href="oprecprobes2021.html">
               <div id="child2
               " class="menuboxtwib">
@@ -88,10 +88,163 @@
               </div>
             </a>
           </div>
+          <div class="col-lg-3 no-gutters appspad mt-3">
+            <a href="oprecStaffAhli2021.html">
+              <div id="child2
+              " class="menuboxtwib">
+                <div class="twibbox">
+                  <img src="img/twibonOprec2021.png" alt="" class="d-block m-auto" />
+                </div>
+                <h5 class="text-center">Twibbon Staff Ahli EM UB 2021</h5>
+              </div>
+            </a>
+          </div>
+          <div class="row justify-content-center">
+        <!-- <div class="col-lg-4 no-gutters appspad mt-3">
+          <a href="oprecStaffAhli2021.html">
+            <div id="child2
+            " class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/twibonOprec2021.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Twibbon Staff Ahli EM UB 2021</h5>
+            </div>
+          </a>
+        </div> -->
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="idulfitri2021.html">
+            <div id="child2
+            " class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/idulfitri2021.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Idul Fitri 1442 H</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="hariPahlawan.html">
+            <div id="child2
+            " class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/pahlawan.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Challenge Hari Pahlawan</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="staffMudaEM2020.html">
+            <div id="child2
+            " class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/twibbon_staffmuda.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Twibbon Staff Muda EM 2020</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="agustus_75.html">
+            <div id="child2
+            " class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/HUT_RI.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">HUT RI</h5>
+            </div>
+          </a>
+        </div>
+        <!-- <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="oprecStaffAhli2021.html">
+            <div id="child2
+            " class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/twibonOprec2021.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Twibbon Staff Ahli EM UB 2021</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="idulfitri2021.html">
+            <div id="child2
+            " class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/idulfitri2021.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Idul Fitri 1442 H</h5>
+            </div>
+          </a>
+        </div> -->
+      </div>
         </div>
       </section>
-      <div class="row ml-0 mr-0">
-        <div class="col-lg-4 no-gutters appspad mt-3">
+      <div class="row justify-content-center">
+        <!-- <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="staffMudaEM2020.html">
+            <div id="child2
+            " class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/twibbon_staffmuda.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Twibbon Staff Muda EM 2020</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="agustus_75.html">
+            <div id="child2
+            " class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/HUT_RI.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">HUT RI</h5>
+            </div>
+          </a>
+        </div> -->
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="tolleranceid.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/twibbontoleranceid.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Tollerance in Diversity</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="oprecbms.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/twibbonbms.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Brawijaya Millennial Summit</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="oprec3probes.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/Twibbon-oprec3probes.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Twibbon Oprec 3 Proker Besar </h5>
+            </div>
+          </a>
+        </div>
+        <!-- Ini batas bawahnya -->
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="em2020.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/EM2020.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Twibbon EM 2020</h5>
+            </div>
+          </a>
+        </div>
+        <!-- <div class="col-lg-4 no-gutters appspad mt-3">
           <a href="oprecStaffAhli2021.html">
             <div id="child2
             " class="menuboxtwib">
@@ -112,8 +265,8 @@
               <h5 class="text-center">Idul Fitri 1442 H</h5>
             </div>
           </a>
-        </div>
-        <div class="col-lg-4 no-gutters appspad mt-3">
+        </div> -->
+        <!-- <div class="col-lg-4 no-gutters appspad mt-3">
           <a href="hariPahlawan.html">
             <div id="child2
             " class="menuboxtwib">
@@ -123,11 +276,83 @@
               <h5 class="text-center">Challenge Hari Pahlawan</h5>
             </div>
           </a>
-        </div>
+        </div> -->
       </div>
     <section id="twib-content" style="display: block">
-      <div class="row ml-0 mr-0">
-        <div class="col-lg-4 no-gutters appspad mt-3">
+      <div class="row justify-content-center">
+        <!-- <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="oprecbms.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/twibbonbms.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Brawijaya Millennial Summit</h5>
+            </div>
+          </a>
+        </div> -->
+        <!-- Taruh kode disini ya Ra -->
+        <!-- <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="oprec3probes.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/Twibbon-oprec3probes.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Twibbon Oprec 3 Proker Besar </h5>
+            </div>
+          </a>
+        </div> -->
+        <!-- Ini batas bawahnya -->
+        <!-- <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="em2020.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/EM2020.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">Twibbon EM 2020</h5>
+            </div>
+          </a>
+        </div> -->
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="diesnatub.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/twibdiesnat.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">DIES NATALIS UB Ke-57</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="baramuda.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/baramuda.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">BARAMUDA</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="agustus.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/17an.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center">HUT RI</h5>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-3 no-gutters appspad mt-3">
+          <a href="idulfitri.html">
+            <div id="child2" class="menuboxtwib">
+              <div class="twibbox">
+                <img src="img/twibbon.png" alt="" class="d-block m-auto" />
+              </div>
+              <h5 class="text-center h5">Idul Fitri</h5>
+            </div>
+          </a>
+        </div>
+        <!-- <div class="col-lg-4 no-gutters appspad mt-3">
           <a href="staffMudaEM2020.html">
             <div id="child2
             " class="menuboxtwib">
@@ -158,87 +383,9 @@
               <h5 class="text-center">Tollerance in Diversity</h5>
             </div>
           </a>
-        </div>
-        </div>
-    <section id="twib-content" style="display: block">
-      <div class="row ml-0 mr-0">
-        <div class="col-lg-4 no-gutters appspad mt-3">
-          <a href="oprecbms.html">
-            <div id="child2" class="menuboxtwib">
-              <div class="twibbox">
-                <img src="img/twibbonbms.png" alt="" class="d-block m-auto" />
-              </div>
-              <h5 class="text-center">Brawijaya Millennial Summit</h5>
-            </div>
-          </a>
-        </div>
-        <!-- Taruh kode disini ya Ra -->
-        <div class="col-lg-4 no-gutters appspad mt-3">
-          <a href="oprec3probes.html">
-            <div id="child2" class="menuboxtwib">
-              <div class="twibbox">
-                <img src="img/Twibbon-oprec3probes.png" alt="" class="d-block m-auto" />
-              </div>
-              <h5 class="text-center">Twibbon Oprec 3 Proker Besar </h5>
-            </div>
-          </a>
-        </div>
-        <!-- Ini batas bawahnya -->
-        <div class="col-lg-4 no-gutters appspad mt-3">
-          <a href="em2020.html">
-            <div id="child2" class="menuboxtwib">
-              <div class="twibbox">
-                <img src="img/EM2020.png" alt="" class="d-block m-auto" />
-              </div>
-              <h5 class="text-center">Twibbon EM 2020</h5>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 no-gutters appspad mt-3">
-          <a href="diesnatub.html">
-            <div id="child2" class="menuboxtwib">
-              <div class="twibbox">
-                <img src="img/twibdiesnat.png" alt="" class="d-block m-auto" />
-              </div>
-              <h5 class="text-center">DIES NATALIS UB Ke-57</h5>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 no-gutters appspad mt-3">
-          <a href="baramuda.html">
-            <div id="child2" class="menuboxtwib">
-              <div class="twibbox">
-                <img src="img/baramuda.png" alt="" class="d-block m-auto" />
-              </div>
-              <h5 class="text-center">BARAMUDA</h5>
-            </div>
-          </a>
-        </div>
+        </div> -->
       </div>
-      <div class="row ml-0 mr-0">
-        <div class="col-lg-4 no-gutters appspad mt-3">
-          <a href="agustus.html">
-            <div id="child2" class="menuboxtwib">
-              <div class="twibbox">
-                <img src="img/17an.png" alt="" class="d-block m-auto" />
-              </div>
-              <h5 class="text-center">HUT RI</h5>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 no-gutters appspad mt-3">
-          <a href="idulfitri.html">
-            <div id="child2" class="menuboxtwib">
-              <div class="twibbox">
-                <img src="img/twibbon.png" alt="" class="d-block m-auto" />
-              </div>
-              <h5 class="text-center h5">Idul Fitri</h5>
-            </div>
-          </a>
-        </div>
-      </div>
-    </section>
-
+  
     <section id="slide-content" style="display: none">
       <div class="row ml-0 mr-0">
         <div class="col-lg no-gutters appspad mt-4">
@@ -270,7 +417,7 @@
     <div class="container-fluid mt-5">
       <div class="row">
         <div class="col-sm-12">
-          <p class=" small font-weight-lighter mt-2 mb-2">Dari Biro Puskominfo &#10084; Untuk Brawijaya</p>
+          <p class=" small font-weight-lighter mt-6 mb-2">IT EM 2022</p>
         </div>
       </div>
     </div>
