--- a/style/agustus_75.html
+++ b/style/agustus_75.html
@@ -8,21 +8,21 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/croppie.css" />
     <link rel="stylesheet" href="css/sweetalert.css" />
-    <link rel="stylesheet" href="css/em2020twib.css" />
-    <link rel="stylesheet" href="css/twibagustus1.css" />
-    <link href="../img/EMUB2020.png" rel="icon" />
+    <link rel="stylesheet" href="css/emtwib.css" />
+    <link rel="stylesheet" href="css/twibagustus.css" />
+    <link href="../img/logo2.png" rel="icon" />
   </head>
   <body>
     <div class="container">
       <div class="twibtitle">
-        <h1 class="title font-weight-lighter">TWIBBON</h1>
-        <h3 class="title font-weight-lighter">HUT KEMERDEKAAN RI 75TH</h3>
+        <h1 class="title font-weight-bold">TWIBBON</h1>
+        <h3 class="title font-weight-medium">HUT KEMERDEKAAN RI 74TH</h3>
         <br />
       </div>
       <div class="row robofont">
         <div class="col-md-6">
           <div class="uploader">
-            <img src="img/LOGO_EM_2020.png" class="uploadlogo" alt="" />
+            <img src="img/logo.png" class="uploadlogo" alt="" />
             <canvas id="imageCanvas" class="image-canvas"></canvas>
 
             <div class="profile-pic-wrap">
@@ -43,7 +43,7 @@
         </div>
 
         <div class="col-md-6">
-          <div id="caption" class="boxcapt mt-3">
+          <div id="caption" class="boxcapt mt-auto">
             <p>
               Upload di instastory kamu, jangan lupa tag @em_ubofficial sertakan
               hashtag #brawijayaunggul
@@ -54,7 +54,7 @@
 
       <a href="index.html">
         <p class="text-center mt-3 text-white font-weight-light robofont">
-          &#8592; back to EM - Twib
+          &#8592; Kembali
         </p>
       </a>
     </div>
@@ -63,6 +63,6 @@
     <script src="js/croppie.js"></script>
     <script src="js/load-image.all.min.js"></script>
     <script src="js/sweetalert.min.js"></script>
-    <script src="js/emtwibagustus1.js"></script>
+    <script src="js/emtwibagustus.js"></script>
   </body>
 </html>
