--- a/style/diesnatub.html
+++ b/style/diesnatub.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="col-md-6">
-                <div id="caption" class="boxcapt mt-3">
+                <div id="caption" class="boxcapt mt-auto">
                     <h5>
                         Caption Twibbon
                         <span class="h6 font-weight-light">(click to copy)</span>
@@ -72,7 +72,7 @@
 
       <a href="index.html">
         <p class="text-center mt-3 text-white font-weight-light robofont">
-          &#8592; back to EM - Twib
+          &#8592; Kembali
         </p>
       </a>
     </div>
