--- a/style/menantibaramuda.html
+++ b/style/menantibaramuda.html
@@ -15,8 +15,8 @@
   <body>
     <div class="container">
       <div class="twibtitle">
-        <h1 class="title font-weight-lighter">TWIBBON</h1>
-        <h3 class="title font-weight-lighter">Menanti BARAMUDA EM UB 2019</h3>
+        <h1 class="title font-weight-bold">TWIBBON</h1>
+        <h3 class="title font-weight-medium">Menanti BARAMUDA EM UB 2019</h3>
         <br />
       </div>
       <div class="row robofont">
