--- a/style/oprecprobes2021.html
+++ b/style/oprecprobes2021.html
@@ -11,20 +11,20 @@
   <link rel="stylesheet" href="css/sweetalert.css" />
   <link rel="stylesheet" href="css/em2020twib.css" />
   <link rel="stylesheet" href="css/oprecprobes2021.css" />
-  <link href="../img/icon/logo.png" rel="icon" />
+  <link href="../img/icon/logo em 2022.png" rel="icon" />
 </head>
 
 <body>
   <div class="container">
     <div class="twibtitle">
-      <h1 class="title font-weight-lighter">TWIBBON</h1>
-      <h3 class="title font-weight-lighter">Open Recruitment Staff 3 Proker Besar 2021</h3>
+      <h1 class="title font-weight-bold">TWIBBON</h1>
+      <h3 class="title font-weight-medium">Open Recruitment Staff 3 Proker Besar 2021</h3>
       <br />
     </div>
     <div class="row robofont">
       <div class="col-md-6">
         <div class="uploader">
-          <img src="../img/LOGO EM UB 2021.png" class="uploadlogo" alt="" />
+          <img src="../img/icon/logo em 2022.png" height="115" class="uploadlogo" alt="" />
           <canvas id="imageCanvas" class="image-canvas"></canvas>
 
           <div class="profile-pic-wrap">
@@ -33,14 +33,14 @@
 
           <div class="download-button">
             <input type="file" name="file" id="imageLoader" class="inputfile" accept="image/*" />
-            <label for="imageLoader" class="button">Pilih Foto</label>
-            <a class="basic-result button">Tampilkan</a>
+            <label id="btnpilihfoto" for="imageLoader" class="button">Pilih Foto</label>
+            <a id="btntampilkan" class="basic-result button">Tampilkan</a>
           </div>
         </div>
       </div>
 
       <div class="col-md-6">
-        <div id="caption" class="boxcapt mt-3">
+        <div id="caption" class="boxcapt mt-auto">
           <h5>
             Caption Twibbon
             <span class="h6 font-weight-light">(click to copy)</span>
@@ -79,7 +79,7 @@ Mahasiswa Brawijaya 2021
 
     <a href="index.html">
       <p class="text-center mt-3 text-white font-weight-light robofont">
-        &#8592; back to EM - Twib
+        &#8592; Kembali
       </p>
     </a>
   </div>
