--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 </div>
                             <div class="row mr-0 ml-0">
                                 <div class="col-4 no-gutters">
-                                    <a href="info/index.html">
+                                    <a href="https://em.ub.ac.id/berita-3/">
                                         <div class="card menu-card">
                                             <div class="btn">
                                                 <!-- <h3 class="text-center card-title ">Yuk cek event kita!</h3> -->
