--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
   <!-- <link rel="shortcut icon" href="img/LOGO EM UB 2021.png" type="image/x-icon">
   <link rel="icon" href="img/LOGO EM UB 2021.png" type="image/x-icon"> -->
 
-  <link rel="shortcut icon" href="img/icon/logo.png">
+  <link rel="shortcut icon" href="img/icon/logo-22.png">
   <!-- Favicon -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/emstyle.css">
@@ -33,7 +33,7 @@
 
 <body>
   <section id="avaheader">
-    <img id="foto" src="img/LOGO EM UB 2021.png" alt="" class="profileava" />
+    <img id="foto" src="img/logo-em-22.png" alt="" class="profileava" />
     <div class="profilecontent">
       <h4 id="nim"></h4>
       <h4 id="nama"><b>You are a guest</b></h4>
@@ -51,7 +51,7 @@
   <!-- Nav -->
   <nav class="nav">
     <a href="https://em.ub.ac.id" class="nav__link ">
-        <i class="img-margin nav__icon"><img class="img-size" src="img/icon/logo.png" alt=""></i>
+        <i class="img-margin nav__icon"><img class="img-size" src="img/icon/logo-22.png" alt=""></i>
         <div class="nav__text">Profile</div>
     </a>
     <a href="index.html" class="nav__link nav__link--active">
