--- a/emlink.html
+++ b/emlink.html
@@ -1,7 +1,7 @@
 <html lang="en">
 	<head>
 		<!--  Favicon -->
-		<link rel="shortcut icon" href="img/icon/logo.png" />
+		<link rel="shortcut icon" href="img/icon/logo-22.png" />
 		<!-- Favicon -->
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -48,7 +48,7 @@
 		<a href="index.html">
 			<i class="fas fa-arrow-left backicon"></i>
 		</a>
-		<img src="img/logo em ub 2022.png" alt="" class="loginicon" />
+		<img src="img/logo-em-22.png" alt="" class="loginicon" />
 		<div class="loginform">
 			<h1 class="text-center" style="font-weight: bolder">EM - Link</h1>
 			<div id="login" class="text-center">
