--- a/login.html
+++ b/login.html
@@ -29,10 +29,10 @@
 		<link rel="stylesheet" href="css/animations.scss" />
 		<link rel="stylesheet" href="css/emlogin.css" />
 		<link rel="stylesheet" href="css/emsresponsive.css" />
-		<link rel="shortcut icon" href="img/icon/logo.png" />
+		<link rel="shortcut icon" href="img/icon/logo-22.png" />
 	</head>
 	<body>
-		<img src="img/logo em ub 2022.png" alt="" class="loginicon" />
+		<img src="img/logo-em-22.png" alt="" class="loginicon" />
 		<div class="loginform">
 			<h1 class="text-center">EM APPS</h1>
 			<form id="loginform" action="">
