--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="kolomA col-6">
                     <img class="A" style ="padding-top: 100px; padding-bottom: 50px;"  src="img/judulWelcome.png">
-                    <a href="index.html" class="btn btn-lg" style ="border-color: #CF6228; color : #CF6228;" ro et conle="button">Profile EM UB 2022</a>
+                    <a href="https://em.ub.ac.id/" class="btn btn-lg" style ="border-color: #CF6228; color : #CF6228;" ro et conle="button">Profile EM UB 2022</a>
                 </div>
 
                 <div class="kolomB col-6">
