--- a/store/index.html
+++ b/store/index.html
@@ -16,7 +16,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://unpkg.com/scrollreveal"></script>
 
-  <link rel="shortcut icon" href="images/logo-round.png" />
+  <link rel="shortcut icon" href="images/logo-bumm-22.png" style="width: 100000px;"/>
   <title>Brawijaya Preneur</title>
 </head>
 
@@ -33,7 +33,7 @@
     <div class="container h-100">
       <div class="row h-75 align-items-center">
         <div class="col-12 text-center">
-          <img src="images/logo-bp.jpg" class="img-header" alt="">
+          <img src="images/logo-bumm-22.png" class="img-header" alt="">
           <h1 class="font-weight-light">Brawijaya Preneur</h1>
           <p class="lead"">Organized by : <br>Unit Badan Usaha Milik Mahasiswa</p>
           </div>
